# servermon

./: .coveragerc  .gitignore  .travis.yml  CHANGES  COPYING  Dockerfile  MANIFEST.in  Makefile  README  README.rst  README.upgrade  apt2xml.py  compat.py  crawler.py  doc-requirements.txt  epydoc.conf  genxml.py  index.html  make_updates.py  params.json  remotecrawler.py  requirements.txt  settings.py  settings.py.dist  setup.cfg  setup.py  sync_vms.py  test-requirements.txt  tox.ini  urls.py  urls.py.dist  util.py  views.py
apache/: django.wsgi  django.wsgi.dist
contrib/: update-servermon.sh
djangobackends/: StripWhitespaceMiddleware.py  context_processors.py  ldapBackend.py
doc/: conf.py  design-0.3.rst  design-0.4.rst  design-0.5.rst  design-0.6.rst  design-0.7.rst  epydoc.conf  glossary.rst  index.rst  install.rst  upgrade.rst
doc/examples/: README  gunicorn.conf.example.Debian
gunicorn/: servermon.conf
hwdoc/: admin.py  functions.py  models.py  tests.py  urls.py  views.py
hwdoc/fixtures/: initial_data.json  sampledata.json  vendor-model.json
hwdoc/migrations/: 0001_initial.py  0003_auto__add_state.py  0005_migrate_states.py  (+17 more)
projectwide/: functions.py  tests.py  views.py
puppet/: functions.py  models.py  tests.py  views.py
servermon/: apt2xml.py  compat.py  make_updates.py  manage.py  settings-test.py  settings.py.dist  settings_test.py  settings_test_mysql.py  settings_test_postgres.py  settings_test_sqlite.py  urls.py  util.py  wsgi.py
static/: LICENSE  hwdoc.js  jsi18n.js  opensearch.js  updates.css
templates/: 404.html  500.html  base.html  hostlist.html  hostview.html  index.html  inventory.html  packagelist.html  packageview.html  query.html  query_results.html  search.html  vmlist.html
updates/: admin.py  models.py  tests.py  views.py
virt/: admin.py  models.py  util.py
(+183 files in other folders)
