[metadata]
name = servermon
author = Alexandros Kosiaris
author_email = akosiaris@gmail.com
summary = An inventory project to facilitate server monitoring and management through Puppet.
license = 'ISC'
description-file =
	README.rst
home-page = https://github.com/servermon/servermon
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Intended Audience :: System Administrators
	License :: OSI Approved :: ISC License (ISCL)
	Natural Language :: English
	Programming Language :: Python
	Topic :: System :: Clustering
	Topic :: System :: Systems Administration
	Topic :: System :: Monitoring
keywords =
	puppet
	dashboard
	inventory

[files]
packages =
	servermon

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = docbuild
source-dir = doc

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
